@@ -292,11 +292,11 @@ module ActionController #:nodoc:
     end
 
     def [](key)
-      data[key]
+      data[key.to_s]
     end
 
     def []=(key, value)
-      data[key] = value
+      data[key.to_s] = value
     end
 
     def update
